wnfs/src/public/snapshots/wnfs__public__file__snapshot_tests__simple_file.snap
---
source: wnfs/src/public/file.rs
expression: file
---
{
  "value": {
    "wnfs/pub/file": {
      "metadata": {
        "created": 0,
        "modified": 0
      },
      "previous": [],
      "userland": {
        "/": "baeaaaaa"
      },
      "version": "0.2.0"
    }
  },
  "bytes": "oW13bmZzL3B1Yi9maWxlpGd2ZXJzaW9uZTAuMi4waG1ldGFkYXRhomdjcmVhdGVkAGhtb2RpZmllZABocHJldmlvdXOAaHVzZXJsYW5k2CpFAAEAAAA="
}
